# zinkin

./: README.md  nginx.conf  nginx.dev.conf  nginx.srv.conf
client/: .env  package.json  pnpm-lock.yaml  rome.json  tsconfig.json  wmr.config.mjs
client.2/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client.2/src/: FormatDate.css.ts  PostMenu.tsx  api.ts  app.css.ts  app.tsx  main.tsx
client/functions/-api/: [[catchall]].ts
client/public/: AuthGuard.tsx  FormatDate.tsx  Icon.tsx  Markdown.tsx  PostMenu.css.ts  PostMenu.tsx  ShowPost.tsx  Submit.css.ts  Submit.tsx  api.ts  app.css.ts  app.tsx  auth.ts  credential.ts  index.css.ts  index.html  index.tsx  posts.ts  reset.css  twind.ts
client/public/pages/home/: Markdown.tsx  PostMenu.tsx  ShowPost.tsx  Submit.tsx  index.tsx  posts.ts
client/src/: AuthGuard.css.ts  Icon.tsx  Markdown.css.ts  ShowPost.css.ts  ShowPost.tsx  Submit.css.ts  api.ts  app.css.ts  app.tsx  auth.ts  styles.css.ts
server/: .env.example  Cargo.toml  gen-JWT_KEY.sh
server/migrations/: 20230910193801_create_posts.sql  20230910193805_create_post_flags.sql  20231014012649_create_keys.sql  20231120003312_create_posts.sql  20231120004916_create_post_flags.sql  20231120005159_create_keys.sql
server/src/: auth.rs  jsons.rs  main.rs  models.rs  repos.rs  routes.rs  rows.rs  stores.rs  utils.rs
server/src/routes/: auth.rs  cookies.rs  models.rs  posts.rs
