[package]
name = "zinkin"
version = "0.0.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-web = { version = "4.4.0", features = ["cookie"] }
anyhow = "1.0.75"
base64 = "0.21.5"
chrono = { version = "0.4.31", features = ["serde"] }
dashmap = "5.5.3"
jsonwebtoken = "9.1.0"
pulldown-cmark = "0.9.3"
rand = "0.8.5"
rmp-serde = "1.1.2"
serde = { version = "1.0.192", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio", "chrono"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.4.1"
webauthn-rs = "0.5.0-dev"
