[package]
name = "zinkin"
version = "0.0.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = { version = "4.4.0", features = ["cookie"] }
anyhow = "1.0.75"
base64 = "0.22.1"
chrono = { version = "0.4.31", features = ["serde"] }
dashmap = "5.5.3"
dotenvy = "0.15.7"
jsonwebtoken = "9.1.0"
pulldown-cmark = "0.11.0"
rand = "0.8.5"
rmp-serde = "1.1.2"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
webauthn-rs = "0.5.0-dev"
